--- a/Tutorial2.0.ipynb
+++ b/Tutorial2.0.ipynb
@@ -315,25 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-58ca28199fbb>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-58ca28199fbb>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    cheesewhey[i_new[0][:-3]+\"_m\"=float(i_new[1])\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "import gc\n",
     "!ulimit\n",
@@ -345,7 +329,7 @@
     "    vettore=f.readlines()\n",
     "    for i in vettore:\n",
     "        i_new=i.rstrip().split(\"\\t\")\n",
-    "        cheesewhey[i_new[0][:-3]+\"_m\"=float(i_new[1])\n",
+    "        cheesewhey[i_new[0][:-3]+\"_m\"]=float(i_new[1])\n",
     "        \n",
     "\n",
     "in_file=analysis_folder+\"random_micomsheet.tsv\"\n",
@@ -361,6 +345,88 @@
     "matrix1.to_csv(outfile)\n",
     "cherrypy.log(\"Done\")\n",
     "outfile.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8) ME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"analysis_folder+\"random_micomsheet.tsv,sep=\",\")\n",
+    "df=df.transpose(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat=[]\n",
+    "i=0\n",
+    "while i<df.shape[0]:\n",
+    "    metabolita=[]\n",
+    "    metabolita.append(str(df.iloc[i].name))\n",
+    "    somma_neg=0\n",
+    "    somma_pos=0\n",
+    "    elemento=0\n",
+    "    donatori=[]\n",
+    "    riceventi=[]\n",
+    "    while elemento<df.shape[1]:\n",
+    "        if df.iloc[i][elemento]<0:\n",
+    "            #print(df.iloc[i][elemento])\n",
+    "            somma_neg=somma_neg+df.iloc[i][elemento]\n",
+    "            v_neg=[]\n",
+    "            v_neg.append(abs(df.iloc[i][elemento]))\n",
+    "            v_neg.append(df.columns[elemento])\n",
+    "            riceventi.append(v_neg)\n",
+    "        if df.iloc[i][elemento]>0:\n",
+    "            #print(df.iloc[i][elemento])\n",
+    "            somma_pos=somma_pos+df.iloc[i][elemento]\n",
+    "            v_pos=[]\n",
+    "            v_pos.append(df.iloc[i][elemento])\n",
+    "            v_pos.append(df.columns[elemento])\n",
+    "            donatori.append(v_pos)\n",
+    "        elemento=elemento+1\n",
+    "    totale_scambiato=abs(somma_neg)+abs(somma_pos)\n",
+    "    metabolita.insert(1,totale_scambiato)\n",
+    "   \n",
+    "    if (somma_pos+somma_neg) >=0:\n",
+    "        somma_medium=somma_pos+somma_neg\n",
+    "        riceventi.append([abs(somma_medium),\"medium\"])\n",
+    "        metabolita.append(abs(somma_neg+somma_medium))\n",
+    "        metabolita.append(abs(somma_pos))\n",
+    "    elif (somma_pos+somma_neg) <0:\n",
+    "        somma_medium=somma_pos+somma_neg\n",
+    "        donatori.append([abs(somma_medium),\"medium\"])\n",
+    "        metabolita.append(abs(somma_pos+somma_medium))\n",
+    "        metabolita.append(abs(somma_neg))\n",
+    "    if len(riceventi)>0:\n",
+    "        metabolita.append(riceventi)\n",
+    "    if len(donatori)>0:\n",
+    "        metabolita.append(donatori)\n",
+    "    mat.append(metabolita)\n",
+    "    i=i+1\n",
+    "edges=\"\"\n",
+    "\n",
+    "for i in mat:\n",
+    "    try:\n",
+    "        metabat_ricevente=0\n",
+    "        for metabat_ricevente in i[4]:\n",
+    "            for metabat_donatore in i[5]:\n",
+    "                met=\"\"\n",
+    "                met=met+metabat_donatore[1]+\"\\t(\"+i[0]+\")\\t\"+metabat_ricevente[1]+\"\\t=\\t\"+str(((metabat_ricevente[0]*metabat_donatore[0])/i[3])*i[1])+\"\\n\"\n",
+    "                edges=edges+met\n",
+    "    except:\n",
+    "        continue\n"
    ]
   },
   {
